--- a/notebooks/09_lightgbm_model.ipynb
+++ b/notebooks/09_lightgbm_model.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ec5bb6f5",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c0630c92",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a518bd63",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8fc071fb",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d954860d",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.008791 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.003869 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 22889\n",
       "[LightGBM] [Info] Number of data points in the train set: 657, number of used features: 672\n",
@@ -615,7 +615,7 @@
        "LGBMRegressor()"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5a9192e0",
    "metadata": {},
    "outputs": [
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "e1c0fb3a",
    "metadata": {},
    "outputs": [
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "387a24d7",
    "metadata": {},
    "outputs": [
@@ -678,66 +678,49 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:src.experiment_utils:MLflow tracking URI and credentials set.\n",
-      "2025/05/09 21:34:15 INFO mlflow.tracking.fluent: Experiment with name 'LGBMRegressor-Citibike' does not exist. Creating a new experiment.\n",
-      "INFO:src.experiment_utils:Experiment set to: LGBMRegressor-Citibike\n",
+      "2025/05/10 23:13:50 INFO mlflow.tracking.fluent: Experiment with name 'citibikeproject-experiment' does not exist. Creating a new experiment.\n",
+      "INFO:src.experiment_utils:Experiment set to: citibikeproject-experiment\n",
       "INFO:src.experiment_utils:Logged mean_absolute_error: 5.755750834863307\n",
-      "c:\\Users\\mahmo\\anaconda3\\envs\\venv\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/mlflow/types/utils.py:435: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
-      "INFO:src.experiment_utils:Model signature inferred.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a89cd73f5d843beb3ee2c3b68dab5f0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading artifacts:   0%|          | 0/7 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Successfully registered model 'LGBMRegressor'.\n",
-      "2025/05/09 21:34:31 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: LGBMRegressor, version 1\n",
-      "Created version '1' of model 'LGBMRegressor'.\n",
-      "INFO:src.experiment_utils:Model logged with name: LGBMRegressor\n"
+      "INFO:src.experiment_utils:Model signature inferred.\n",
+      "Successfully registered model 'LGBMRegressor-Citibike'.\n",
+      "2025/05/10 23:13:58 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: LGBMRegressor-Citibike, version 1\n",
+      "Created version '1' of model 'LGBMRegressor-Citibike'.\n",
+      "INFO:src.experiment_utils:Model logged with name: LGBMRegressor-Citibike\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🏃 View run luminous-bass-293 at: https://dagshub.com/mahmoodalikhan7/citi_bike_data_project.mlflow/#/experiments/4/runs/299e392af5b944cab9be858ff8d4ae69\n",
-      "🧪 View experiment at: https://dagshub.com/mahmoodalikhan7/citi_bike_data_project.mlflow/#/experiments/4\n"
+      "🏃 View run amusing-whale-906 at: https://dagshub.com/ryallavinuthnareddy/citibikeproject.mlflow/#/experiments/4/runs/9a23c2428da34fa3981f6ce5ae383fc3\n",
+      "🧪 View experiment at: https://dagshub.com/ryallavinuthnareddy/citibikeproject.mlflow/#/experiments/4\n",
+      "✅ Model successfully logged to MLflow.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<mlflow.models.model.ModelInfo at 0x2635529b890>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from src.experiment_utils import set_mlflow_tracking, log_model_to_mlflow\n",
-    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "import mlflow\n",
+    "from src.experiment_utils import log_model_to_mlflow\n",
     "\n",
-    "load_dotenv()\n",
-    "mlflow = set_mlflow_tracking()\n",
+    "# 🔐 Set MLflow tracking credentials directly (bypassing .env)\n",
+    "mlflow.set_tracking_uri(\"https://dagshub.com/ryallavinuthnareddy/citibikeproject.mlflow\")\n",
+    "os.environ[\"MLFLOW_TRACKING_USERNAME\"] = \"ryallavinuthnareddy\"\n",
+    "os.environ[\"MLFLOW_TRACKING_PASSWORD\"] = \"92dd14cdf34bef08d8871bf22dbdc0869a9198cf\"  # replace with your token\n",
     "\n",
-    "log_model_to_mlflow(model, X_test_only_numeric, \"LGBMRegressor-Citibike\", \"mean_absolute_error\", score=test_mae)\n"
+    "# ✅ Run logging\n",
+    "log_model_to_mlflow(\n",
+    "    model=model,\n",
+    "    input_data=X_test_only_numeric,  # 🔁 Corrected argument name\n",
+    "    experiment_name=\"citibikeproject-experiment\",\n",
+    "    metric_name=\"mean_absolute_error\",\n",
+    "    model_name=\"LGBMRegressor-Citibike\",\n",
+    "    score=test_mae\n",
+    ")\n",
+    "\n",
+    "print(\"✅ Model successfully logged to MLflow.\")\n"
    ]
   },
   {
@@ -767,7 +750,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -781,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
