--- a/notebooks/10_lgm_with_fe.ipynb
+++ b/notebooks/10_lgm_with_fe.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ed730c8c-6079-4378-96da-e4ff7b535eda",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2bb7a93e-7d57-48ab-8bc4-8fa9243d4ff5",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "85c60551-d713-46de-961a-8738f752c18f",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2b1fc983-a7e5-4dcb-830b-bcab1d8a5e95",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8d1c64ba-6608-464d-9950-33a647cee576",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d2237359-1695-4845-8ff4-6b48a2df22f5",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
        "[657 rows x 675 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a156f664-5bd0-4c28-abc2-e2c40d6bdcb8",
    "metadata": {},
    "outputs": [
@@ -886,7 +886,7 @@
        "[657 rows x 675 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "9a8b3f91-7c69-4cbb-88c9-e3f0ed7464e0",
    "metadata": {},
    "outputs": [
@@ -919,7 +919,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.010964 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.004864 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 23004\n",
       "[LightGBM] [Info] Number of data points in the train set: 657, number of used features: 674\n",
@@ -1434,21 +1434,21 @@
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
        "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Pipeline(steps=[(&#x27;functiontransformer&#x27;,\n",
-       "                 FunctionTransformer(func=&lt;function average_rides_last_4_weeks at 0x000001FE30EE7C40&gt;)),\n",
+       "                 FunctionTransformer(func=&lt;function average_rides_last_4_weeks at 0x107add9e0&gt;)),\n",
        "                (&#x27;temporalfeatureengineer&#x27;, TemporalFeatureEngineer()),\n",
        "                (&#x27;lgbmregressor&#x27;, LGBMRegressor())])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;Pipeline<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.pipeline.Pipeline.html\">?<span>Documentation for Pipeline</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>Pipeline(steps=[(&#x27;functiontransformer&#x27;,\n",
-       "                 FunctionTransformer(func=&lt;function average_rides_last_4_weeks at 0x000001FE30EE7C40&gt;)),\n",
+       "                 FunctionTransformer(func=&lt;function average_rides_last_4_weeks at 0x107add9e0&gt;)),\n",
        "                (&#x27;temporalfeatureengineer&#x27;, TemporalFeatureEngineer()),\n",
-       "                (&#x27;lgbmregressor&#x27;, LGBMRegressor())])</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;FunctionTransformer<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.preprocessing.FunctionTransformer.html\">?<span>Documentation for FunctionTransformer</span></a></label><div class=\"sk-toggleable__content fitted\"><pre>FunctionTransformer(func=&lt;function average_rides_last_4_weeks at 0x000001FE30EE7C40&gt;)</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">TemporalFeatureEngineer</label><div class=\"sk-toggleable__content fitted\"><pre>TemporalFeatureEngineer()</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">LGBMRegressor</label><div class=\"sk-toggleable__content fitted\"><pre>LGBMRegressor()</pre></div> </div></div></div></div></div></div>"
+       "                (&#x27;lgbmregressor&#x27;, LGBMRegressor())])</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;FunctionTransformer<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.preprocessing.FunctionTransformer.html\">?<span>Documentation for FunctionTransformer</span></a></label><div class=\"sk-toggleable__content fitted\"><pre>FunctionTransformer(func=&lt;function average_rides_last_4_weeks at 0x107add9e0&gt;)</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">TemporalFeatureEngineer</label><div class=\"sk-toggleable__content fitted\"><pre>TemporalFeatureEngineer()</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">LGBMRegressor</label><div class=\"sk-toggleable__content fitted\"><pre>LGBMRegressor()</pre></div> </div></div></div></div></div></div>"
       ],
       "text/plain": [
        "Pipeline(steps=[('functiontransformer',\n",
-       "                 FunctionTransformer(func=<function average_rides_last_4_weeks at 0x000001FE30EE7C40>)),\n",
+       "                 FunctionTransformer(func=<function average_rides_last_4_weeks at 0x107add9e0>)),\n",
        "                ('temporalfeatureengineer', TemporalFeatureEngineer()),\n",
        "                ('lgbmregressor', LGBMRegressor())])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1468,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "47ffe1b8-20d4-420a-997d-a7c19cfa39f2",
    "metadata": {},
    "outputs": [
@@ -1842,7 +1842,7 @@
        "[657 rows x 675 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1854,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "e5633c24-9658-4224-b4cb-4a7a8397803a",
    "metadata": {},
    "outputs": [
@@ -1876,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "be2dadf5-c49d-4915-bc0d-091048a2f920",
    "metadata": {},
    "outputs": [
@@ -2263,7 +2263,7 @@
        "[657 rows x 675 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2274,7 +2274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "86c1f78e-4739-491b-90ca-bb393ebead8d",
    "metadata": {},
    "outputs": [
@@ -2282,66 +2282,48 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:src.experiment_utils:MLflow tracking URI and credentials set.\n",
-      "2025/05/09 21:37:49 INFO mlflow.tracking.fluent: Experiment with name 'LGBMRegressorWFE-Citibike' does not exist. Creating a new experiment.\n",
-      "INFO:src.experiment_utils:Experiment set to: LGBMRegressorWFE-Citibike\n",
+      "INFO:src.experiment_utils:Experiment set to: citibikeproject-experiment\n",
       "INFO:src.experiment_utils:Logged mean_absolute_error: 5.6360656031957\n",
-      "c:\\Users\\mahmo\\anaconda3\\envs\\venv\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/mlflow/types/utils.py:435: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
-      "INFO:src.experiment_utils:Model signature inferred.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e659ad6b00d4af4ad1f2824f84c108a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading artifacts:   0%|          | 0/7 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Successfully registered model 'Pipeline'.\n",
-      "2025/05/09 21:38:05 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: Pipeline, version 1\n",
-      "Created version '1' of model 'Pipeline'.\n",
-      "INFO:src.experiment_utils:Model logged with name: Pipeline\n"
+      "INFO:src.experiment_utils:Model signature inferred.\n",
+      "Successfully registered model 'LGBMRegressorWFE-Citibike'.\n",
+      "2025/05/10 23:33:38 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: LGBMRegressorWFE-Citibike, version 1\n",
+      "Created version '1' of model 'LGBMRegressorWFE-Citibike'.\n",
+      "INFO:src.experiment_utils:Model logged with name: LGBMRegressorWFE-Citibike\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🏃 View run mercurial-koi-141 at: https://dagshub.com/mahmoodalikhan7/citi_bike_data_project.mlflow/#/experiments/5/runs/7e6ff6d09b1544bfade626fcee6217dc\n",
-      "🧪 View experiment at: https://dagshub.com/mahmoodalikhan7/citi_bike_data_project.mlflow/#/experiments/5\n"
+      "🏃 View run rumbling-midge-845 at: https://dagshub.com/ryallavinuthnareddy/citibikeproject.mlflow/#/experiments/4/runs/8b2d1e108e5e4d21b8a989838e657c45\n",
+      "🧪 View experiment at: https://dagshub.com/ryallavinuthnareddy/citibikeproject.mlflow/#/experiments/4\n",
+      "✅ Model logged to MLflow.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<mlflow.models.model.ModelInfo at 0x1fe49014e10>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from src.experiment_utils import set_mlflow_tracking, log_model_to_mlflow\n",
-    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "import mlflow\n",
+    "from src.experiment_utils import log_model_to_mlflow\n",
     "\n",
-    "load_dotenv()\n",
-    "mlflow = set_mlflow_tracking()\n",
+    "# 🔐 Set MLflow tracking manually (no .env file needed)\n",
+    "mlflow.set_tracking_uri(\"https://dagshub.com/ryallavinuthnareddy/citibikeproject.mlflow\")\n",
+    "os.environ[\"MLFLOW_TRACKING_USERNAME\"] = \"ryallavinuthnareddy\"\n",
+    "os.environ[\"MLFLOW_TRACKING_PASSWORD\"] = \"92dd14cdf34bef08d8871bf22dbdc0869a9198cf\"  # Replace with your real token\n",
     "\n",
-    "log_model_to_mlflow(pipeline, X_test, \"LGBMRegressorWFE-Citibike\", \"mean_absolute_error\", score=test_mae)\n"
+    "# ✅ Log model to MLflow\n",
+    "log_model_to_mlflow(\n",
+    "    model=pipeline,\n",
+    "    input_data=X_test,  # ✅ Correct argument name (not X_test=)\n",
+    "    experiment_name=\"citibikeproject-experiment\",\n",
+    "    metric_name=\"mean_absolute_error\",\n",
+    "    model_name=\"LGBMRegressorWFE-Citibike\",\n",
+    "    score=test_mae\n",
+    ")\n",
+    "\n",
+    "print(\"✅ Model logged to MLflow.\")\n"
    ]
   },
   {
@@ -2355,7 +2337,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2369,7 +2351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
