--- a/notebooks/15_predict_using_hopsworks_model.ipynb
+++ b/notebooks/15_predict_using_hopsworks_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "10a142f3",
    "metadata": {},
    "outputs": [],
@@ -25,26 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "2cb7c771",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025/05/10 06:49:07 INFO mlflow.tracking.fluent: Experiment with name 'xgboost-lag3' does not exist. Creating a new experiment.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "🔐 Logging in to Hopsworks...\n",
-      "2025-05-10 06:49:07,903 INFO: Closing external client and cleaning up certificates.\n",
+      "2025-05-11 01:40:26,135 INFO: Closing external client and cleaning up certificates.\n",
       "Connection closed.\n",
-      "2025-05-10 06:49:07,908 INFO: Initializing external client\n",
-      "2025-05-10 06:49:07,908 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
+      "2025-05-11 01:40:26,141 INFO: Initializing external client\n",
+      "2025-05-11 01:40:26,141 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
      ]
     },
     {
@@ -61,11 +54,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-05-10 06:49:08,783 INFO: Python Engine initialized.\n",
+      "2025-05-11 01:40:27,151 INFO: Python Engine initialized.\n",
       "\n",
-      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1214682\n",
-      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (1.73s) \n",
-      "✅ Loaded features: (53070, 3)\n"
+      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1215676\n",
+      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (0.84s) \n",
+      "✅ Loaded features: (26535, 3)\n"
      ]
     }
    ],
@@ -84,18 +77,21 @@
     "mlflow.set_experiment(\"xgboost-lag3\")\n",
     "\n",
     "# Step 2: Load Features from Hopsworks\n",
+    "\n",
     "print(\"🔐 Logging in to Hopsworks...\")\n",
     "project = hopsworks.login(project=c.HOPSWORKS_PROJECT_NAME, api_key_value=c.HOPSWORKS_API_KEY)\n",
     "fs = project.get_feature_store()\n",
     "\n",
     "fg = fs.get_feature_group(name=c.FEATURE_GROUP_NAME, version=c.FEATURE_GROUP_VERSION)\n",
     "df = fg.read()\n",
-    "print(\"✅ Loaded features:\", df.shape)"
+    "print(\"✅ Loaded features:\", df.shape)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "e8460881",
    "metadata": {},
    "outputs": [
@@ -103,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Data with lags: (53052, 6)\n"
+      "✅ Data with lags: (26526, 6)\n"
      ]
     }
    ],
@@ -117,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "9b33d49e",
    "metadata": {},
    "outputs": [],
@@ -137,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "1e6e1942",
    "metadata": {},
    "outputs": [
@@ -146,16 +142,16 @@
      "output_type": "stream",
      "text": [
       "FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "2025/05/10 06:49:33 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+      "\u001b[31m2025/05/11 01:40:47 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\u001b[0m\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🏃 View run polite-koi-966 at: https://dagshub.com/mahmoodalikhan7/citi_bike_data_project.mlflow/#/experiments/6/runs/e728012482854f3f927343f3d3b83061\n",
-      "🧪 View experiment at: https://dagshub.com/mahmoodalikhan7/citi_bike_data_project.mlflow/#/experiments/6\n",
-      "✅ Model trained. RMSE: 6.663106680477977 MAE: 4.593537635116652\n"
+      "🏃 View run glamorous-hen-348 at: https://dagshub.com/ryallavinuthnareddy/citibikeproject.mlflow/#/experiments/5/runs/70649123f9e54b55a9e2a15d832f756f\n",
+      "🧪 View experiment at: https://dagshub.com/ryallavinuthnareddy/citibikeproject.mlflow/#/experiments/5\n",
+      "✅ Model trained. RMSE: 6.688097561380374 MAE: 4.604501147477114\n"
      ]
     }
    ],
@@ -204,14 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "af604219",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7caa85afe7048fdace756182310aeed",
+       "model_id": "f17cd17d59cf471a8ace68e632146b19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,12 +221,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55d81c7ce0454c379222573574415aec",
+       "model_id": "59ecea7155b24346a46bb7aec2d2564b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Uploading: 0.000%|          | 0/396960 elapsed<00:00 remaining<?"
+       "Uploading: 0.000%|          | 0/399480 elapsed<00:00 remaining<?"
       ]
      },
      "metadata": {},
@@ -240,7 +236,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model created, explore it at https://c.app.hopsworks.ai:443/p/1214682/models/citi_bike_data/1\n",
+      "Model created, explore it at https://c.app.hopsworks.ai:443/p/1215676/models/citi_bike_data/1\n",
       "📦 Model registered in Hopsworks: citi_bike_data\n"
      ]
     }
@@ -263,14 +259,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "b2d2a6cd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ef60b8d87434cc1927bf7585271856f",
+       "model_id": "aeec10f4a335422197617534596b02dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -284,12 +280,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4878bf2a62364156804709c8c071c973",
+       "model_id": "b4b3070ce93a41d68ac2c860574f6247",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Uploading: 0.000%|          | 0/396960 elapsed<00:00 remaining<?"
+       "Uploading: 0.000%|          | 0/399480 elapsed<00:00 remaining<?"
       ]
      },
      "metadata": {},
@@ -299,7 +295,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model created, explore it at https://c.app.hopsworks.ai:443/p/1214682/models/citi_bike_data/2\n",
+      "Model created, explore it at https://c.app.hopsworks.ai:443/p/1215676/models/citi_bike_data/2\n",
       "📦 Model registered in Hopsworks: citi_bike_data\n"
      ]
     }
@@ -435,7 +431,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -449,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
