--- a/notebooks/17_fetch_predictions.ipynb
+++ b/notebooks/17_fetch_predictions.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "1555e775-4045-409a-a2cd-b22934b5fe3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-05-11 02:41:42,856 INFO: Initializing external client\n",
+      "2025-05-11 02:41:42,857 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "UserWarning: The installed hopsworks client version 4.1.8 may not be compatible with the connected Hopsworks backend version 4.2.0. \n",
+      "To ensure compatibility please install the latest bug fix release matching the minor version of your backend (4.2) by running 'pip install hopsworks==4.2.*'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-05-11 02:41:43,991 INFO: Python Engine initialized.\n",
+      "\n",
+      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1215676\n",
+      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (1.08s) \n"
+     ]
+    }
+   ],
    "source": [
     "# %load_ext autoreload\n",
     "# %autoreload 2\n",
@@ -19,12 +48,23 @@
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
     "\n",
     "import src.config as config\n",
-    "from src.inference import get_feature_store\n"
+    "from src.inference import get_feature_store\n",
+    "\n",
+    "\n",
+    "\n",
+    "fs = get_feature_store()\n",
+    "\n",
+    "# ✅ Step 2: Read data from the feature group\n",
+    "fg = fs.get_feature_group(\n",
+    "    name=config.FEATURE_GROUP_NAME,\n",
+    "    version=config.FEATURE_GROUP_VERSION\n",
+    ")\n",
+    "df = fg.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "419b80e9",
    "metadata": {},
    "outputs": [
@@ -44,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "d25c8599",
    "metadata": {},
    "outputs": [
@@ -52,10 +92,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-05-10 07:26:54,834 INFO: Closing external client and cleaning up certificates.\n",
+      "2025-05-11 02:43:58,936 INFO: Closing external client and cleaning up certificates.\n",
       "Connection closed.\n",
-      "2025-05-10 07:26:54,840 INFO: Initializing external client\n",
-      "2025-05-10 07:26:54,841 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
+      "2025-05-11 02:43:58,941 INFO: Initializing external client\n",
+      "2025-05-11 02:43:58,942 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
      ]
     },
     {
@@ -63,19 +103,17 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\n",
-      "UserWarning: The installed hopsworks client version 4.1.8 may not be compatible with the connected Hopsworks backend version 4.2.0. \n",
-      "To ensure compatibility please install the latest bug fix release matching the minor version of your backend (4.2) by running 'pip install hopsworks==4.2.*'\n"
+      "\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-05-10 07:26:55,698 INFO: Python Engine initialized.\n",
+      "2025-05-11 02:43:59,989 INFO: Python Engine initialized.\n",
       "\n",
-      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1214682\n",
-      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (0.88s) \n"
+      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1215676\n",
+      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (0.85s) \n"
      ]
     }
    ],
@@ -87,10 +125,13 @@
     "\n",
     "# 🌟 Get the feature store\n",
     "fs = project.get_feature_store()\n",
+    "\n",
+    "\n",
     "fg = fs.get_feature_group(\n",
-    "    name=config.FEATURE_GROUP_MODEL_PREDICTION,\n",
-    "    version=config.FEATURE_GROUP_MODEL_PREDICTION_VERSION\n",
+    "    name=config.FEATURE_GROUP_NAME,\n",
+    "    version=config.FEATURE_GROUP_VERSION\n",
     ")\n",
+    "\n",
     "\n",
     "# 📦 Read and filter data\n",
     "df = fg.read()\n",
@@ -99,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "5e79d949",
    "metadata": {},
    "outputs": [
@@ -126,56 +167,66 @@
        "      <th></th>\n",
        "      <th>pickup_location_id</th>\n",
        "      <th>pickup_hour</th>\n",
-       "      <th>predicted_rides</th>\n",
+       "      <th>rides</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5396</th>\n",
+       "      <th>11699</th>\n",
        "      <td>6948.10</td>\n",
        "      <td>2023-12-31 23:00:00+00:00</td>\n",
-       "      <td>5</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14209</th>\n",
+       "      <th>6894</th>\n",
        "      <td>6140.05</td>\n",
        "      <td>2023-12-31 23:00:00+00:00</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2868</th>\n",
+       "      <th>10546</th>\n",
        "      <td>5329.03</td>\n",
        "      <td>2023-12-31 23:00:00+00:00</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      pickup_location_id               pickup_hour  predicted_rides\n",
-       "5396             6948.10 2023-12-31 23:00:00+00:00                5\n",
-       "14209            6140.05 2023-12-31 23:00:00+00:00                3\n",
-       "2868             5329.03 2023-12-31 23:00:00+00:00                2"
+       "      pickup_location_id               pickup_hour  rides\n",
+       "11699            6948.10 2023-12-31 23:00:00+00:00     13\n",
+       "6894             6140.05 2023-12-31 23:00:00+00:00      2\n",
+       "10546            5329.03 2023-12-31 23:00:00+00:00      0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_locations = predictions.sort_values(\"predicted_rides\", ascending=False)\n",
-    "top_locations[[\"pickup_location_id\", \"pickup_hour\", \"predicted_rides\"]].head(10)\n"
+    "top_locations = predictions.sort_values(\"rides\", ascending=False)\n",
+    "top_locations[[\"pickup_location_id\", \"pickup_hour\", \"rides\"]].head(10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "dc350c61",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['pickup_hour', 'pickup_location_id', 'rides']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(predictions.columns.tolist())\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -220,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -234,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
