--- a/notebooks/01_fetch_data.ipynb
+++ b/notebooks/01_fetch_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "b864df1f-3b61-4d10-b63e-a0e0bb7a2acd",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ea3d5f04-c44f-4f2f-9d32-64508e212d29",
    "metadata": {},
    "outputs": [
@@ -40,16 +40,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved: ..\\data\\raw\\rides_2023_01.parquet\n"
+      "Saved: ../data/raw/rides_2023_01.parquet\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'..\\\\data\\\\raw\\\\rides_2023_01.parquet'"
+       "'../data/raw/rides_2023_01.parquet'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -83,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
