--- a/notebooks/02_validate_and_save.ipynb
+++ b/notebooks/02_validate_and_save.ipynb
@@ -736,7 +736,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved: ..\\data\\processed\\rides_2023_01.parquet\n"
+      "Saved: ../data/processed/rides_2023_01.parquet\n"
      ]
     }
    ],
@@ -756,11 +756,27 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a7c6299-bddb-44eb-bc35-545fb192b85d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f65419f-84a7-4b46-bc18-c223df4d92b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -774,7 +790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
