--- a/notebooks/16_inference_pipeline.ipynb
+++ b/notebooks/16_inference_pipeline.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3be2eafc",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bca0f057",
    "metadata": {},
    "outputs": [],
@@ -65,8 +65,10 @@
      "output_type": "stream",
      "text": [
       "🔐 Connecting to Hopsworks...\n",
-      "2025-05-10 06:52:42,586 INFO: Initializing external client\n",
-      "2025-05-10 06:52:42,586 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
+      "2025-05-11 01:42:50,800 INFO: Closing external client and cleaning up certificates.\n",
+      "Connection closed.\n",
+      "2025-05-11 01:42:50,804 INFO: Initializing external client\n",
+      "2025-05-11 01:42:50,805 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
      ]
     },
     {
@@ -83,9 +85,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-05-10 06:52:44,107 INFO: Python Engine initialized.\n",
+      "2025-05-11 01:42:51,581 INFO: Python Engine initialized.\n",
       "\n",
-      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1214682\n"
+      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1215676\n"
      ]
     }
    ],
@@ -106,10 +108,10 @@
      "output_type": "stream",
      "text": [
       "📦 Loading latest model...\n",
-      "2025-05-10 06:52:46,736 INFO: Closing external client and cleaning up certificates.\n",
+      "2025-05-11 01:42:54,849 INFO: Closing external client and cleaning up certificates.\n",
       "Connection closed.\n",
-      "2025-05-10 06:52:46,742 INFO: Initializing external client\n",
-      "2025-05-10 06:52:46,743 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
+      "2025-05-11 01:42:54,853 INFO: Initializing external client\n",
+      "2025-05-11 01:42:54,853 INFO: Base URL: https://c.app.hopsworks.ai:443\n"
      ]
     },
     {
@@ -117,19 +119,17 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\n",
-      "UserWarning: The installed hopsworks client version 4.1.8 may not be compatible with the connected Hopsworks backend version 4.2.0. \n",
-      "To ensure compatibility please install the latest bug fix release matching the minor version of your backend (4.2) by running 'pip install hopsworks==4.2.*'\n"
+      "\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-05-10 06:52:47,487 INFO: Python Engine initialized.\n",
+      "2025-05-11 01:42:55,697 INFO: Python Engine initialized.\n",
       "\n",
-      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1214682\n",
-      "Downloading model artifact (0 dirs, 1 files)... DONE\r"
+      "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1215676\n",
+      "Downloading model artifact (0 dirs, 1 files)... DONE"
      ]
     }
    ],
@@ -169,7 +169,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (1.91s) \n"
+      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (0.99s) \n"
      ]
     }
    ],
@@ -191,7 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (0.66s) \n"
+      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (0.95s) \n"
      ]
     }
    ],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "a5f64842",
    "metadata": {},
    "outputs": [
@@ -224,11 +224,9 @@
      "output_type": "stream",
      "text": [
       "  pickup_location_id  predicted_rides               pickup_hour\n",
-      "0               5329                6 2024-01-01 00:00:00+00:00\n",
-      "1            5329.03                6 2024-01-01 00:00:00+00:00\n",
-      "2               6140                4 2024-01-01 00:00:00+00:00\n",
-      "3            6140.05                4 2024-01-01 00:00:00+00:00\n",
-      "4               6948               10 2024-01-01 00:00:00+00:00\n"
+      "0            5329.03                6 2024-01-01 00:00:00+00:00\n",
+      "1            6140.05                4 2024-01-01 00:00:00+00:00\n",
+      "2            6948.10               10 2024-01-01 00:00:00+00:00\n"
      ]
     }
    ],
@@ -242,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "7ac83771",
    "metadata": {},
    "outputs": [
@@ -270,7 +268,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -284,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
